[tool.poetry]
name = "arxiv-to-epub"
version = "0.1.0"
description = "A project to generate EPUBs from arXiv URLs"
authors = ["Charles Low <charleslow88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
pypandoc = "^1.11"
watchdog = "^3.0.0"
arxiv = "^2.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
